# ecu_sw_bb

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  arm-toolchain.cmake  build.sh  check_cs.sh  deploy.sh  format-code.sh  test.sh
.github/workflows/: pr-code-style-check.yml  pr-test.yml
docker/: Dockerfile.build  Dockerfile.check
docs/: architecture.md  classDiagram.puml  protocol.md  sequenceDiagram.puml
include/: CommandProcessor.h  SerialReceiver.h  config.h  motorsProcessor.h
rootfs/: download_rootfs.sh
src/: CommandProcessor.cpp  SerialReceiver.cpp  TCPServerReceiver.cpp  main.cpp  motorsProcessor.cpp
src/kpi_rover_ecu/: CMakeLists.txt
src/kpi_rover_ecu/include/: IClient.h  IMUController.h  ITransport.h  KPIRoverECU.h  PIDRegulator.h  TCPServerReceiver.h  TCPTransport.h  UDPClient.h  config.h  loggingIncludes.h  messageQueue.h  motor.h  motorConfig.h  motorsController.h  motorsProcessor.h  protocolHandler.h
src/kpi_rover_ecu/src/: CMakeLists.txt  IMUController.cpp  KPIRoverECU.cpp  PIDRegulator.cpp  TCPServerReceiver.cpp  TCPTransport.cpp  UDPClient.cpp  main.cpp  messageQueue.cpp  motor.cpp  motorConfig.cpp  motorsController.cpp  protocolHandler.cpp
src/kpi_rover_ecu/tests/: CMakeLists.txt  test_imu_controller.cpp  test_message_queue.cpp  test_motor.cpp  test_motor_controller.cpp  test_pid_regulator.cpp  test_protocol.cpp
src/kpi_rover_ecu/tests/mocks/librobotcontrol/: CMakeLists.txt
src/kpi_rover_ecu/tests/mocks/librobotcontrol/include/: mock_rc_encoder.h  mock_rc_imu.h  mock_rc_motor.h  mock_rc_start_stop.h  mock_rc_time.h
src/kpi_rover_ecu/tests/mocks/librobotcontrol/src/: encoder.cpp  imu.cpp  motor.cpp  start_stop.cpp  time.cpp
src/librobotcontrol_mock/: CMakeLists.txt
src/librobotcontrol_mock/include/: encoder.h  gpio.h  motor.h  robotcontrol.h
src/librobotcontrol_mock/src/: encoder.c  gpio.c  motor.c  process_control.c
system/: kpi_rover_ecu.service
tcp-server/: .Makefile.swp  .TCPServerReceiver.cpp.swp  .TCPServerReceiver.h.swp  .server.cpp.swp  CMakeLists.txt  Makefile  TCPServerReceiver.cpp  TCPServerReceiver.h  server  server.cpp
tcp-server/include/: TCPServerReceiver.h  config.h  endpoints.h  motorsProcessor.h
tcp-server/src/: TCPServerReceiver.cpp  main.cpp  motorsProcessor.cpp  server.cpp
test/: CMakeLists.txt  test_tcp_server.cpp
